# cpplib

./: .gitignore  C++基础.md  CMake.md  IO.md  LICENSE  README.md  ctags.md  gdb.md  glog.md  googletest.md  log4cpp.md  notes.md  onnxruntime.md  poco.md  rapidjson使用.md  socket.md  stl.md  tensorrt.txt  wav文件处理.md  刷题记录.md  多线程.md  多进程.md  常问问题.md  文件读写.md  模板编程.md  正则.md  类型转换.md  网络编程.md
code/: .clang-format  .gitignore  CMakeLists.txt  README.md  docs  gitignore
code/MPI/: CMakeLists.txt  main.cpp  test.cu
code/ModernCpp/: CMakeLists.txt
code/ModernCpp/10_type/: 1_pair.cpp  2_tuple.cpp  3_optional.cpp  4_variant  4_variant.cpp  5_any.cpp  6_bitfield.cpp
code/ModernCpp/11_policy_traits/: 10_enable_if_app  1_policy.cpp  2_type_traits.cpp  3_predict_trait1.cpp  4_predict_trait2.cpp  6_trait_tag.cpp  7_iterator_traits.cpp  CMakeLists.txt
code/ModernCpp/12_concept/: 10_invocable.cpp  11_poly_concept.cpp  12_shape_concept.cpp  1_OO_Interface.cpp  2_Concept_Interface.cpp  3_concept_basic1.cpp  4_concept_basic2.cpp  5_concept_basic3.cpp  6_concept_basic4.cpp  7_concept_basic5.cpp  8_concept_inherit.cpp  8_require_bool.cpp  9_require_expression.cpp  CMakeLists.txt
code/ModernCpp/13_oo_design/: CMakeLists.txt
code/ModernCpp/14_compile/: 10_consteval2.cpp  10_mixin.cpp  11_consteval3.cpp  12_consteval4.cpp  1_constexpr1.cpp  2_constexpr2.cpp  3_constexpr3.cpp  4_constexpr4.cpp  5_constexprif1.cpp  6_constexprif2.cpp  7_constexprif3.cpp  8_constinit.cpp  9_consteval1.cpp  CMakeLists.txt
code/ModernCpp/15_coroutine/: 1_Co_Await  1_Co_Await.cpp  2_Co_Yield  2_Co_Yield.cpp  3_Co_Return  3_Co_Return.cpp  4_CoTask_Internals  4_CoTask_Internals.cpp  5_CoTask_Memory  5_CoTask_Memory.cpp  6_CoAwaiter  6_CoAwaiter.cpp
code/ModernCpp/16_module/: compare-3-way.cpp
code/ModernCpp/1_module1/: 10_vector_array.cpp  11_string_demo.cpp  12_string_SSO.cpp  13_FBString_SOO.cpp  14_bitfield.cpp  15_struct_bind.cpp  1_stack_heap.cpp  2_point_reference.cpp  3_object_model.cpp  4_object_this.cpp  5_object_size.cpp  6_ctor_dtor.cpp  7_raii.cpp  8_scopeguard.cpp  9_copy-assigment.cpp  CMakeLists.txt  memory-error.cpp
code/ModernCpp/2_module2/: 10_virtual_clone.cpp  1_inherit_model.cpp  2_inherit_type.cpp  3_virtual_inherit.cpp  4_using_base.cpp  5_empty_base.cpp  6_empty_base_smartptr.cpp  7_virtual_bind.cpp  8_virtual_table.cpp  9_dynamic_type.cpp
code/ModernCpp/3_PImpl/: CMakeLists.txt
code/ModernCpp/4_module3/: 10_binding.cpp  11_std_move.cpp  12_move_rvo.cpp  13_ref_forward.cpp  14_ref_collapse.cpp  15_ref_not_forward.cpp  16_forward_param.cpp  17_set_value.cpp  1_object_move.cpp  2_rvalue.cpp  3_left_right_move.cpp  4_move_copy_swap1.cpp  5_move_copy_swap2.cpp  6_move_member.cpp  7_move_base.cpp  8_move_rule5.cpp  9_move_optimize.cpp  CMakeLists.txt
code/ModernCpp/5_unique_ptr/: 10_unique_param.cpp  11_make_unique.cpp  12_unique_array.cpp  13_unique_container.cpp  14_linked_list.cpp  15_unique_move_param.cpp  1_unique_intro.cpp  2_smartptr-impl.cpp  3_unique_memory.cpp  4_unique_api.cpp  5_unique_this.cpp  6_unique_cast.cpp  7_unique_member1.cpp  8_unique_member2.cpp  9_unique_factory.cpp
code/ModernCpp/6_shared_ptr/: 10_this_share_error.cpp  11_this_share_impl.cpp  12_this_share_design.cpp  13_share_array.cpp  14_shared_node.cpp  15_share_guide.cpp  1_share_basic.cpp  2_share_delete.cpp  3_block_share.cpp  4_make_unique.cpp  5_share_member.cpp  6_cast_share.cpp  7_weak_circle.cpp  8_weak_api.cpp  9_unique_shared.cpp
code/ModernCpp/7_newdelete/: 1_placement_new.cpp  2_stl_fill.cpp  3_global_new.cpp  4_class_new_delete.cpp  5_new_nothrow.cpp  CMakeLists.txt
code/ModernCpp/8_lambda/: 10_lambda_generic.cpp  11_lambda_overload.cpp  12_base_init.cpp  13_variadic_base.cpp  14_bind.cpp  15_mem_fn.cpp  16_std_function.cpp  17_std_function_invoke.cpp  18_invoke_internal.cpp  19_ref_functor.cpp  1_functor.cpp  20_ref_param.cpp  21_ref_wrapper.cpp  2_lambda_intro.cpp  3_lambda_capture.cpp  4_lambda_capture_this1.cpp  5_lambda_capture_this2.cpp  6_lambda_capture_this3.cpp  7_lambda_capture_this_error.cpp  8_lambda_capture_this_share.cpp  9_lambda_capture_move.cpp  CMakeLists.txt
code/ModernCpp/9_template/: 1_template_arg_value.cpp  1_template_class.cpp  2_member_template.cpp  3_using_alias.cpp  4_type_infer.cpp  5_template_special.cpp  6_template_special_part.cpp  7_crtp_interface.cpp  8_crtp_enable_shared_from_this.cpp  CMakeLists.txt
code/cmake/: boost.cmake  cereal.cmake  eigen.cmake  flatbuffers.cmake  fvad.cmake  gflags.cmake  glog.cmake  jieba.cmake  libtorch.cmake  minizip.cmake  onnx.cmake  opencc.cmake  openfst.cmake  poco.cmake  rapidjson.cmake
code/cudacode/: CMakeLists.txt  cublas_gemm.cpp  cudnn_activate.cpp  cudnn_dropout.cpp  cutest.cpp  cutest.cu  decoder1_net.cpp  decoder1_net.h  mykernel.cu  network.cpp  network.h  test.cu
code/cudacode/base/: CMakeLists.txt  NDTensor.cpp  NDTensor.h  ctensor.h  ctensor.h_bak  cuhelper.h  cutensor.h_bak  tensor.h
code/cudacode/kernels/: CMakeLists.txt  init_kernel.cu  init_kernel.h  matrix_transpose.cu  matrix_transpose.h  reduction.cu
code/data/: ali_vad.onnx  ali_vad_cmvn
code/dockerfiles/: Dockerfile.build  Dockerfile.build_cuda  Dockerfile.deploy  Dockerfile.deploy_gpu
code/onnx/: CMakeLists.txt  decoder1.onnx  file-util.h  test_onnx.cpp
code/source/utils/: base.h  (+42 more)
code/test/: CMakeLists.txt  audio_test.cpp  cereal_test.cpp  crypto_test.cpp  crypto_test1.cpp  ctensor_test.cpp  eigen_test.cpp  filesystem_test.cpp  flatbuffers_test.cpp  fvad_test.cpp  just_test.cpp  minizip_test.cpp  mongodb_test.cpp  mysql_test.cpp  omp_test.cpp  path_test.cpp  path_unittest.cpp  poco_test.cpp  rapidjson_test.cpp  redis_test.cpp  regex_util_test.cpp  rnnoise_test.cpp  string_util_test.cpp  text-utils-test.cpp  threadpool_test.cpp  vad_test.cpp
code/trt/: CMakeLists.txt  TRTLogging.h  readme.txt  trt_demo.cpp  trt_util.h
code/unittest/: CMakeLists.txt  main.cpp  path_unittest.cpp  string-unittest.cpp
utils/: .gitignore  CMakeLists.txt  ReadMe.md  blocking_queue.h  math-utils.h  path.cpp  path.h  path_test.cpp  text-utils.h  timer.h
(+404 files in other folders)
